--- a/antora/components/refguide-index/modules/extensions/pages/index/sse/wicket/webmodule/WebModuleServerSentEvents.adoc
+++ b/antora/components/refguide-index/modules/extensions/pages/index/sse/wicket/webmodule/WebModuleServerSentEvents.adoc
@@ -9,6 +9,7 @@ WebModule providing support for Server Sent Events.
 .WebModuleServerSentEvents.java
 ----
 class WebModuleServerSentEvents {
+  public static final String LOGICAL_TYPE_NAME;
   WebModuleServerSentEvents(ServiceInjector serviceInjector)
   Can<ServletContextListener> init(ServletContext ctx)
 }
