--- a/antora/components/refguide-index/modules/security/pages/index/bypass/CausewayModuleSecurityBypass.adoc
+++ b/antora/components/refguide-index/modules/security/pages/index/bypass/CausewayModuleSecurityBypass.adoc
@@ -9,6 +9,7 @@ Auth/bypass for eg. Integration Testing
 .CausewayModuleSecurityBypass.java
 ----
 class CausewayModuleSecurityBypass {
+  public static final String NAMESPACE;
 }
 ----
 
