--- a/antora/components/refguide-index/modules/security/pages/index/spring/webmodule/WebModuleSpringSecurity.adoc
+++ b/antora/components/refguide-index/modules/security/pages/index/spring/webmodule/WebModuleSpringSecurity.adoc
@@ -9,6 +9,7 @@ WebModule to enable support for Spring Security.
 .WebModuleSpringSecurity.java
 ----
 class WebModuleSpringSecurity {
+  public static final String LOGICAL_TYPE_NAME;
   WebModuleSpringSecurity(ServiceInjector serviceInjector)
   Can<ServletContextListener> init(ServletContext ctx)
 }
