--- a/antora/components/refguide-index/modules/applib/pages/index/CausewayModuleApplib.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/CausewayModuleApplib.adoc
@@ -14,6 +14,7 @@ public static final String NAMESPACE_CONF;
 public static final String NAMESPACE_SUDO;
   // for app features
 public static final String NAMESPACE_FEAT;
+  public static final String NAMESPACE_VALUE;
 }
 ----
 
