--- a/antora/components/refguide-index/modules/security/pages/index/bypass/authorization/AuthorizorBypass.adoc
+++ b/antora/components/refguide-index/modules/security/pages/index/bypass/authorization/AuthorizorBypass.adoc
@@ -7,6 +7,7 @@
 .AuthorizorBypass.java
 ----
 class AuthorizorBypass {
+  public static final String LOGICAL_TYPE_NAME;
   boolean isVisible(InteractionContext authentication, Identifier identifier)
   boolean isUsable(InteractionContext authentication, Identifier identifier)
 }
