--- a/antora/components/refguide-index/modules/valuetypes/pages/index/jodatime/integration/CausewayModuleValJodatimeIntegration.adoc
+++ b/antora/components/refguide-index/modules/valuetypes/pages/index/jodatime/integration/CausewayModuleValJodatimeIntegration.adoc
@@ -7,6 +7,7 @@
 .CausewayModuleValJodatimeIntegration.java
 ----
 class CausewayModuleValJodatimeIntegration {
+  public static final String NAMESPACE;
 }
 ----
 
