--- a/testing/integtestsupport/adoc/modules/integtestsupport/pages/about.adoc
+++ b/testing/integtestsupport/adoc/modules/integtestsupport/pages/about.adoc
@@ -406,12 +406,11 @@ public class SimpleObject_IntegTest extends SimpleModuleIntegTestAbstract {
 Some of the methods being called here are inherited from the superclass, so let's look at that next.
 
 
-== CausewayIntegrationTestAbstract
+== CausewayIntegrationTestAbstract / CausewayIntegrationGwtAbstract
 
-For convenience the framework provides the `CausewayIntegrationTestAbstract` as a base class for integration tests.
+For convenience the framework provides the xref:refguide:testing:index/integtestsupport/applib/CausewayIntegrationTestAbstract.adoc[] and  xref:refguide:testing:index/integtestsupport/applib/CausewayIntegrationGwtAbstract.adoc[] classes, either of which can be used as a base class for integration tests.
 
-
-This is the class that provides the `wrap(...)` method (as see in the xref:about.adoc#typical-usage[previous section]).
+These classes that provides the `wrap(...)` method (as see in the xref:about.adoc#typical-usage[previous section]).
 It also provides a number of other convenience methods:
 
 * `wrap()` - as just mentioned.
@@ -457,8 +456,6 @@ This is discussed further xref:about.adoc#wrapper-factory[below].
 for more control over transactions
 
 
-The class also defines (as a nested static class) the `InteractionSupport` as a domain service.
-If ``@Import``ed into the integration test's "app manifest", this ensures that any xref:refguide:applib:index/services/command/Command.adoc[Command]s that are raised as the result of interactions through the wrapper factory are setup correctly.
 
 
 [#wrapper-factory]
